# RAGVue

./: .env  CONTRIBUTORS.md  README.md  pyproject.toml  streamlit_app.py
example_data/: example_data_agentic.jsonl  example_data_manual.jsonl  pydantic_test.py  test.py
ragvue/: __init__.py  cli.py  python_cli.py
ragvue/smoke_tests/: smoke_test.py  test_smoke.py
ragvue/src/core/: agentic_mode.py  aspects.py  base.py  manual_mode.py  metrics_loader.py  schema_models.py  utils.py
ragvue/src/metrics/: answer_completeness.py  answer_relevance.py  calibration_answer_completeness.py  calibration_answer_relevance.py  calibration_clarity.py  calibration_generic.py  calibration_retrieval_coverage.py  calibration_retrieval_relevance.py  calibration_strict_faithfulness.py  clarity.py  retrieval_coverage.py  retrieval_relevance.py  strict_faithfulness.py
ragvue/src/reporting/: report.py
